@@ -8,6 +8,8 @@ HEAD, planned as v0.28
 - Italian translation was added, special thanks to Luca Cavallari
 - adds a external component that is based on a file instead
   of storing the code in the component itself.
+- Fixed an issue with clicking on tightly placed components.
+- Variable sample size in default data graph.
 
 v0.27, released on 9. Apr. 2021
 - Added fixed point and floating point number formats.
